# Approximate-Distance-Oracle

./: .gitignore  Readme.md
code/: CMakeLists.txt  inp  script.py  sparse-d.py  sparse-oracle.py  test-200-x.csv  test-x-2000.csv  test3-200-x.csv  test3-kVsTime.csv  test3-x-2000.csv
code/output/Plotting/: dense.ipynb  edges.csv  sparse.ipynb  vertices.csv
code/output/Plotting/.ipynb_checkpoints/: sparse-checkpoint.ipynb
code/output/Plotting/d/: as-caida_G_001_connected.mtx-0  as-caida_G_002_connected.mtx-0  as-caida_G_003_connected.mtx-0  as-caida_G_004_connected.mtx-0  as-caida_G_005_connected.mtx-0  as-caida_G_006_connected.mtx-0  as-caida_G_007_connected.mtx-0  as-caida_G_008_connected.mtx-0  as-caida_G_009_connected.mtx-0  as-caida_G_010_connected.mtx-0  as-caida_G_011_connected.mtx-0  as-caida_G_012_connected.mtx-0  as-caida_G_013_connected.mtx-0  as-caida_G_014_connected.mtx-0  as-caida_G_015_connected.mtx-0  as-caida_G_016_connected.mtx-0  as-caida_G_017_connected.mtx-0  as-caida_G_018_connected.mtx-0  as-caida_G_019_connected.mtx-0  as-caida_G_020_connected.mtx-0  as-caida_G_021_connected.mtx-0  as-caida_G_022_connected.mtx-0  as-caida_G_023_connected.mtx-0  (+99 more)
code/src/: AdjacencyList.hpp  AdjacencyList2.hpp  CMakeLists.txt  Oracle.hpp  Oracle2.hpp  OracleFib.hpp  Readme.md  fiboqueue.hpp  inc.cpp
code/tests/: AdjLstTest.cpp  CMakeLists.txt  GraphTest.cpp  GraphUtilities.hpp  K1Test.cpp  OracleBuild.cpp  RandomGraphTest.cpp  RandomGraphTest2.cpp  RandomGraphTest3.cpp  Readme.md  UFDS.hpp  Utilities.hpp  Utilities2.hpp
docs/: Report.tex  citation.bib
(+1464 files in other folders)
